2007-11-06  Mathias Hasselmann  <mathias@openismus.com>

	Introduce common API for managing basic, shareable Avahi infrastructure.

	* libepc/avahi-shell.c, libepc/avahi-shell.h: Introduce EpcAvahiShell.
	* libepc/dispatcher.c, tests/framework.c: Use EpcAvahiShell.
	* Makefile.am: Add libepc/avahi-shell.c and libepc/avahi-shell.h.

2007-11-05  Mathias Hasselmann  <mathias@openismus.com>

	Merge password dialog from the libank experiment.

	* libepc-ui/passworddialog.c, libepc-ui/passworddialog.h:
	Merge password dialog from the libank experiment.
	* examples/test-consumer.c: Use EpcPasswordDialog.
	* configure.in, Makefile.am, libepc-ui.pc.in, libepc-ui/.gitignore:
	Add shared libepc-ui library containing libepc specific widgets.
	* libepc.pc.in: Correct the cflags property.
	* tests/.gitignore: Add *.loT

2007-11-05  Mathias Hasselmann  <mathias@openismus.com>

	Document authentication mechanism and add "reauthenticate" signal.

	* docs/reference/libepc/libepc-sections.txt, libepc/publisher.c,
	libepc/publisher.h: Document authentication mechanism.
	* libepc/consumer.c: Document authentication mechanism
	and add "reauthenticate" signal.

2007-11-05  Mathias Hasselmann  <mathias@openismus.com>

	Implement authentication for EpcPublisher and EpcConsumer.

	* examples/test-consumer.c: Demonstrate authentication callback.
	* examples/test-publisher.c: Demonstrate publishing of sensitive data.
	* libepc/consumer.c, libepc/consumer.h: Add "authenticate" signal.
	* libepc/marshal.list: Add marshaller for "authenticate" signal.
	* libepc/.gitignore: Add generated files marshal.c and marshal.h.
	* Makefile.am: Add marshal.c, marshal.h and code to generate them.
	* libepc/publisher.c, libepc/publisher.h: Implement authentication
	by adding epc_publisher_set_auth_handler and EpcAuthContext.

2007-11-05  Mathias Hasselmann  <mathias@openismus.com>

	Demonstrate epc_publisher_add_handler.

	* examples/test-publisher.c: Demonstrate epc_publisher_add_handler.
